fixed render issue

--- a/freelanceForum.html
+++ b/freelanceForum.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="freelanceForum.js"></script>
+    <script src="freelanceForum.js" defer></script>
 </head>
 <body>
-    <table id = "freelancers"></table>
+    <table id="freelancers"></table>
 </body>
 </html>
